@@ -7,6 +7,7 @@ HTMLOUTPUTFILE weathermap.html
 FONTDEFINE 10 Vera.ttf 8
 FONTDEFINE 20 VeraIt.ttf 8
 FONTDEFINE 30 VeraIt.ttf 18
+FONTDEFINE 40 Vera.ttf 12
 
 # SET screenshot_mode 1
 
@@ -120,14 +121,53 @@ NODE suite2
 
 NODE master
 	POSITION 100 500
-	LABEL Thing1
-	ICON 30 200 rbox
+	LABEL VLAN 2034 
+	ICON 26 200 rbox
+	LABELANGLE 90
+	LABELFONT 40
 	AICONFILLCOLOR copy
 	LABELOUTLINECOLOR none
 	LABELOFFSET C
+	
+NODE sub1
+	POSITION master 23 -70
+	ICON 16 16 images/red-ball-64.png
 
+NODE sub2
+	POSITION sub1 0 18
+	ICON 16 16 images/green-ball-64.png
 
+NODE sub3
+	POSITION sub2 0 18
+	ICON 16 16 images/grey-ball-64.png
+
+NODE sub4
+	POSITION sub3 0 18
+	ICON 16 16 images/red-ball-64.png
+	
+NODE t1
+	POSITION 350 420
+	ICON 32 32 images/blue-ball-64.png
+	LABEL Server 1
+	LABELOFFSET E
+	LABELOUTLINECOLOR none
+
+NODE t2
+	POSITION 350 520
+	ICON 32 32 round
+	LABEL Server 2
+	LABELOFFSET E
+	LABELOUTLINECOLOR none
+	
 # End of NODE section
+
+LINK t1uplink
+	NODES t1 sub2
+	WIDTH 3
+	
+LINK t2uplink
+	NODES t2 sub4
+	WIDTH 3
 
 # Link definitions:
 LINK lopsy
